--- a/index.html
+++ b/index.html
@@ -4,13 +4,34 @@
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Homework_8</title>
+   <title>Travel with us</title>
    <link rel="stylesheet" href="./styles/normalize.css">
    <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body>
-   <header></header>
-   <main></main>
+   <header>
+      <div class="header__container">
+         <div class="header__logo"></div>
+         <nav class="header__menu">
+            <ul class="header__list">
+               <li class="header__item"><a href="#" class="header__link"></a></li>
+               <li class="header__item"><a href="#" class="header__link"></a></li>
+               <li class="header__item"><a href="#" class="header__link"></a></li>
+               <li class="header__item"><a href="#" class="header__link"></a></li>
+            </ul>
+         </nav>
+      </div>
+   </header>
+   <main>
+      <section class="hero">
+         <h1 class="hero__title"></h1>
+         <p class="hero__subtitle"></p>
+         <form action="#" class="hero__form">
+            <input type="text" class="hero__input">
+         </form>
+      </section>
+      <section class="info"></section>
+   </main>
    <footer></footer>
 </body>
 </html>
