--- a/index.html
+++ b/index.html
@@ -1,37 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-   <meta charset="UTF-8">
-   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Travel with us</title>
-   <link rel="stylesheet" href="./styles/normalize.css">
-   <link rel="stylesheet" href="./styles/style.css">
-</head>
-<body>
-   <header>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Travel with us</title>
+    <link rel="stylesheet" href="./styles/normalize.css" />
+    <link rel="stylesheet" href="./styles/style.css" />
+  </head>
+  <body>
+    <header>
       <div class="header__container">
-         <div class="header__logo"></div>
-         <nav class="header__menu">
-            <ul class="header__list">
-               <li class="header__item"><a href="#" class="header__link"></a></li>
-               <li class="header__item"><a href="#" class="header__link"></a></li>
-               <li class="header__item"><a href="#" class="header__link"></a></li>
-               <li class="header__item"><a href="#" class="header__link"></a></li>
-            </ul>
-         </nav>
+        <div class="header__logo"></div>
+        <nav class="header__menu">
+          <ul class="header__list">
+            <li class="header__item"><a href="#" class="header__link"></a></li>
+            <li class="header__item"><a href="#" class="header__link"></a></li>
+            <li class="header__item"><a href="#" class="header__link"></a></li>
+            <li class="header__item"><a href="#" class="header__link"></a></li>
+          </ul>
+        </nav>
       </div>
-   </header>
-   <main>
+    </header>
+    <main>
       <section class="hero">
-         <h1 class="hero__title"></h1>
-         <p class="hero__subtitle"></p>
-         <form action="#" class="hero__form">
-            <input type="text" class="hero__input">
-         </form>
+        <h1 class="hero__title"></h1>
+        <p class="hero__subtitle"></p>
+        <form action="#" class="hero__form">
+          <input type="text" class="hero__input" />
+        </form>
       </section>
-      <section class="info"></section>
-   </main>
-   <footer></footer>
-</body>
+      <section class="info">
+        <ul class="info__list list">
+          <li class="list__item">Search Places</li>
+          <li class="list__item">Select Places</li>
+          <li class="list__item">Book & Enjoy</li>
+        </ul>
+      </section>
+    </main>
+    <footer></footer>
+  </body>
 </html>
