add header and hero structure

--- a/index.html
+++ b/index.html
@@ -11,24 +11,26 @@
 <body>
    <header>
       <div class="header__container">
-         <div class="header__logo"></div>
+         <div class="header__logo">Bhromaon</div>
          <nav class="header__menu">
             <ul class="header__list">
-               <li class="header__item"><a href="#" class="header__link"></a></li>
-               <li class="header__item"><a href="#" class="header__link"></a></li>
-               <li class="header__item"><a href="#" class="header__link"></a></li>
-               <li class="header__item"><a href="#" class="header__link"></a></li>
+               <li class="header__item"><a href="#" class="header__link">Who We Are</a></li>
+               <li class="header__item"><a href="#" class="header__link"></a>What We Do</li>
+               <li class="header__item"><a href="#" class="header__link"></a>Travel With Us</li>
+               <li class="header__item"><a href="#" class="header__link"></a>Contact Us</li>
             </ul>
          </nav>
       </div>
    </header>
    <main>
       <section class="hero">
-         <h1 class="hero__title"></h1>
-         <p class="hero__subtitle"></p>
+         <h1 class="hero__title">Bhromaon</h1>
+         <p class="hero__subtitle">Safe Travel Anywhere</p>
          <form action="#" class="hero__form">
-            <input type="text" class="hero__input">
+            <input type="search" class="hero__input" placeholder="Search Your Travel Destination">
+            <button type="button">Search</button>
          </form>
+         <a href="#" class="hero__scroll">Scroll Down</a>
       </section>
       <section class="info"></section>
    </main>
