--- a/index.html
+++ b/index.html
@@ -32,6 +32,17 @@
         </form>
         <a href="#" class="hero__scroll">Scroll Down</a>
       </section>
+      <section class="why">
+        <h2 class="why__title">Why Choose Us</h2>
+        <p class="why__text">
+          Tion and dislike men who are so beguiled and demoralized by desire by the charms of pleasure of the moment, so blinded by desire, that they
+          cannot foresee <br /><br />
+          Ddislike men who are so beguiled and demoralized by the charms of pleasure of the moment, so blinded by desire, that.
+        </p>
+        <button class="why__button" type="submit">Explore Places</button>
+        <img src="./Images/River.png" alt="river" />
+        <img src="./Images/Mountains.png" alt="mountains" />
+      </section>
       <section class="info">
         <ul class="info__list list">
           <li class="list__item">Search Places</li>
