--- a/index.html
+++ b/index.html
@@ -36,8 +36,7 @@
         <h2 class="why__title">Why Choose Us</h2>
         <p class="why__text">
           Tion and dislike men who are so beguiled and demoralized by desire by the charms of pleasure of the moment, so blinded by desire, that they
-          cannot foresee <br /><br />
-          Ddislike men who are so beguiled and demoralized by the charms of pleasure of the moment, so blinded by desire, that.
+          cannot foresee Ddislike men who are so beguiled and demoralized by the charms of pleasure of the moment, so blinded by desire, that.
         </p>
         <button class="why__button" type="submit">Explore Places</button>
         <img src="./Images/River.png" alt="river" />
