--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <link rel="stylesheet" href="./styles/style.css" />
   </head>
   <body>
-    <header>
+    <header class="header">
       <div class="header__container">
-        <div class="header__logo">Bhromaon</div>
+        <div class="header__logo logo">Bhromaon</div>
         <nav class="header__menu">
           <ul class="header__list">
             <li class="header__item"><a href="#" class="header__link">Who We Are</a></li>
@@ -24,15 +24,19 @@
     </header>
     <main>
       <section class="hero">
-        <h1 class="hero__title">Bhromaon</h1>
+         <div class="hero__container">
+            <h1 class="hero__title">Bhromaon</h1>
         <p class="hero__subtitle">Safe Travel Anywhere</p>
         <form action="#" class="hero__form">
           <input type="search" class="hero__input" placeholder="Search Your Travel Destination" />
           <button type="submit">Search</button>
         </form>
         <a href="#" class="hero__scroll">Scroll Down</a>
+         </div>
+        
       </section>
-      <section class="why">
+   
+          <section class="why">
         <h2 class="why__title">Why Choose Us</h2>
         <p class="why__text">
           Tion and dislike men who are so beguiled and demoralized by desire by the charms of pleasure of the moment, so blinded by desire, that they
@@ -50,6 +54,7 @@
           <li class="list__item">Book "&amp;" Enjoy</li>
         </ul>
       </section>
+   
     </main>
     <footer></footer>
   </body>
