add header and hero

--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
     <main>
       <section class="hero">
         <div class="hero__container">
-          <h1 class="hero__title">Bhromaon</h1>
+          <h1 class="hero__title logo">Bhromaon</h1>
           <p class="hero__subtitle">Safe Travel Anywhere</p>
           <form action="#" class="hero__form">
             <input type="search" class="hero__input" placeholder="Search Your Travel Destination" />
-            <button type="submit">Search</button>
+            <button type="submit" class="hero__button">Search</button>
           </form>
-          <a href="#" class="hero__scroll">Scroll Down</a>
+          <a href="#info__text" class="hero__scroll">Scroll Down</a>
         </div>
       </section>
       <section class="why">
@@ -73,7 +73,7 @@
               <div class="info__image">
                 <img class="info__image" src="./Images/thumbs-up.svg" alt="like" />
               </div>
-              <p class="info__text">Book "&amp;" Enjoy</p>
+              <p id="info__text" class="info__text">Book "&amp;" Enjoy</p>
             </li>
           </ul>
         </div>
